<resources>
    <string name="app_name">Ziam Food</string>
    <string name="title_activity_main_app">MainAppActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">214208529037100</string>

    <string name="term_condition">ข้อตกลง และ เงื่อนไขของการใช้งาน แอพ ziamfoods</string>

    <string name="api_reviews">http://www.ziamthai.com/index.php/api/business_shop_review/get_data</string>

    <string name="access_token">sd23g125sdf1gc10b3yhik58l4o4</string>
    <string name="access_user_key">3d8ea1e78d4187a02f08112245cb26e3</string>

    <string name="server_client_id">228878799951-vr5in3a78msmh9ibv2sl1j58gu19veqi.apps.googleusercontent.com</string>

    <string name="title_activity_maps">Map</string>

    <!--<string name="Base_URL">https://www.ziamthai.com/api.php/v1/</string>-->
    <!--<string name="Base_URL">https://test.ziamthai.com/api.php/v1/</string>-->
    <string name="Base_URL">https://dev.ziamthai.com/api.php/v2/</string>
    <!--<string name="Base_URL">http://10.252.2.80/ziamthai/api.php/v1/</xzstring>-->
    <string name="URL_last_update">restaurant/finder</string>
    <string name="URL_deal">http://www.ziamthai.com/index.php/api/foods_store/finder/?q=&amp;loc=&amp;pos=&amp;page=1</string>
    <string name="URL_froget_password">accounts/pwd_reset</string>
    <string name="URL_info">restaurant/finder</string>
    <string name="URL_nearby">restaurant/finder</string>
    <string name="URL_order">business_item/finder_category</string>
    <string name="URL_register">accounts/signup</string>
    <string name="URL_reviews_shop">reviews/finder</string>
    <string name="URL_reviews_show">reviews/show</string>
    <string name="URL_search">restaurant/finder</string>
    <string name="URL_search_state">locations/finder</string>
    <string name="URL_shop">business_shop/data</string>
    <string name="URL_signin">accounts/login</string>
    <string name="URL_userprofile">https://www.ziamthai.com/index.php/api/accounts/login</string>
    <string name="URL_online_order">foods_order/save</string>

    <string name="URL_write_reviews">reviews/writing_save</string>
    <!--dropdown menu review ziamfoods shop -->
    <string name="URL_menu_reviews">business_shop/recommend_item</string>
    <!--upload image review ziamfoods shop -->
    <string name="URL_reviews_upload_image">reviews/photo_upload</string>
    <!--write review remove ziamfoods shop -->
    <string name="URL_writereview_remove_image">reviews/photo_remove</string>

    <string name="URL_userprofile_update_info">accounts_update/info</string>
    <string name="URL_userprofile_update_pwd">accounts_update/pwd</string>
    <string name="URL_userprofile_update_photo">accounts_update/photo</string>

    <string name="URL_timeline">timeline/feed</string>
    <string name="URL_blog_detail">blog/show</string>

    <string name="URL_menu_item_reviews">business_item/finder_combobox</string>

    <!--login facebook token-->
    <string name="URL_facebook_login_token">fb_connect/do_login</string>
    <!--login google token-->
    <string name="URL_google_login_token">gg_connect/do_login</string>


    <string name="product_name">Product Name</string>
    <string name="txt_image_slider">Image Slideshow</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu">Menu</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="deal">Deal</string>
    <string name="near_by">NearBy</string>
    <string name="user_profile">User Profile</string>
    <string name="contact">Contact</string>
    <string name="newsfeed">News Feed</string>
    <string name="review">Review</string>
    <string name="blog">Blog</string>
    <string name="post">Post</string>

    <string name="recommend_shop">Recommend Shop</string>
    <string name="new_shop">New Shop</string>
    <string name="total">Total</string>

    <string name="login">Log In</string>
    <string name="signin">Sign in</string>
    <string name="logout">Log Out</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="new_user">New User</string>
    <string name="register_now">Register Now</string>
    <string name="forget_password">Forget Password</string>
    <string name="accept">Accept</string>
    <string name="textRegister1">Not a member yet ?</string>
    <string name="textRegister2">Register here</string>
    <string name="textfrogotpassword1">Forgot you password ?</string>
    <string name="textfrogetpassword2">Click here</string>
    <string name="term_and_conditions">Term And Conditions</string>
    <string name="accept_term_and_conditions">Accept Term And Conditions</string>
    <string name="click">Click</string>

    <string name="search">Search</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="call">Call</string>
    <string name="info">Info</string>
    <string name="online_order">Online Order</string>

    <string name="price">Price</string>
    <string name="qty">QTY</string>
    <string name="addition">Addition</string>
    <string name="note">Note</string>
    <string name="add_to_cart">Add to cart</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="zipcode">Zipcode</string>

    <string name="data_deficient">Enter your name number and zipcode</string>
    <string name="hours">Hours</string>

    <string name="write_review">Write Review</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="score">Score</string>
    <string name="reccomend_menu">Reccomend Menu</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload">Upload</string>
    <string name="save">SAVE</string>

    <string name="review_detail">Review Detail</string>
    <string name="back">Back</string>

    <string name="confirm">confirm</string>
    <string name="user_profile_login_before">Please login user before view user profile</string>

    <string name="text_delete_order">Ordering information is deleted</string>
    <string name="please_login_user">Please login user?</string>
    <string name="shop_close">Shop Close</string>
    <string name="text_null_order">No orders</string>

    <string name="status_connect">Status connect</string>
    <string name="disconnection">Please connect internet!</string>

    <string name="order_success">Order Success</string>
    <string name="order_fail">Order Fail</string>
    <bool name="isTablet">false</bool>

    <string name="last_review">Lasted Review</string>

    <string name="male">male</string>
    <string name="female">female</string>

    <!--font-->
    <string name="FontBold">fonts/SukhumvitSet-Bold.ttf</string>
    <string name="FontLight">fonts/SukhumvitSet-Light.ttf</string>
    <string name="FontMedium">fonts/SukhumvitSet-Medium.ttf</string>
    <string name="FontSemiBold">fonts/SukhumvitSet-SemiBold.ttf</string>
    <string name="FontText">fonts/SukhumvitSet-Text.ttf</string>
    <string name="FontThin">fonts/SukhumvitSet-Thin.ttf</string>

    <string name="read_more">read more</string>

    <!--Write review page-->
    <string name="title_null">Title must be filled</string>
    <string name="description_null">Description must be filled</string>
</resources>
