<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.revenue_express.ziamfoods.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/pink1">
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="@color/white"
            android:textSize="22dp"/>
    </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center">
            <TextView
                android:paddingTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:textSize="16dp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/edt_firstname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_white"/>
            <TextView
                android:paddingTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:textSize="16dp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/edt_lastname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16dp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16dp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/edt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="16dp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/edt_confirmpassword"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_white"/>

            <LinearLayout
                android:padding="12dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term_and_conditions"
                        android:textSize="16dp"
                        android:textColor="@color/white"
                        android:id="@+id/textView" />
                    <TextView
                        android:id="@+id/tv_term_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/click"
                        android:textSize="16dp"
                        android:textColor="@color/pink1"/>
                </LinearLayout>
                <CheckBox
                    android:id="@+id/cb_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept_term_and_conditions"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_Register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_now"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:background="@drawable/background_pink"/>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
