<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_tab"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--<cn.carbs.android.avatarimageview.library.AvatarImageView-->
            <!--android:id="@+id/iv_user"-->
            <!--android:layout_width="60dp"-->
            <!--android:layout_height="60dp"-->
            <!--android:padding="5dp"-->
            <!--app:aiv_BoarderWidth="2dp"-->
            <!--app:aiv_ShowBoarder="false"-->
            <!--app:aiv_TextSizeRatio="0.4"-->
            <!--android:src="@drawable/male"/>-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:src="@drawable/male"
            app:civ_border_width="0dp"
            app:civ_border_color="#FF000000"
            style="@style/ImageUser"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right"
            android:text="@string/login"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

</LinearLayout>
