<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_login2">

    <ImageView
        android:layout_gravity="right"
        android:id="@+id/imgSkip"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:padding="5dp"
        android:src="@drawable/skip_red"
        android:scaleType="centerCrop"
        />

    <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/ziamfood"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_email"
                    android:paddingLeft="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="14dp"/>

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:background="@drawable/background_white_tranparent"
                    android:focusableInTouchMode="true"/>

                <TextView
                    android:id="@+id/tv_password"
                    android:paddingLeft="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:paddingTop="12dp"/>

                <EditText
                    android:id="@+id/editPassword"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:background="@drawable/background_white_tranparent"
                    android:layout_marginBottom="16dp"
                    android:focusableInTouchMode="true"/>

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/gray"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:onClick="onClick"
                    android:text="@string/signin"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingBottom="12dp">
                    <TextView
                        android:id="@+id/txt_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textRegister1"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:layout_gravity="center"/>
                    <TextView
                        android:id="@+id/tv_Register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textRegister2"
                        android:textColor="@color/pink"
                        android:textSize="12dp"
                        android:layout_gravity="center"/>
                </LinearLayout>


                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/fb"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#416BC1"
                    android:onClick="onClick"
                    android:text="FaceBook"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
                <Button
                    android:id="@+id/btnSignInGoogle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#D34836"
                    android:onClick="onClick"
                    android:text="GOOGLE"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right">
                <TextView
                    android:id="@+id/txt_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textfrogotpassword1"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textfrogetpassword2"
                    android:textColor="@color/pink"
                    android:textSize="12dp"
                    android:layout_gravity="center"/>
                    </LinearLayout>
            </LinearLayout>

</LinearLayout>
