<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.revenue_express.ziamfoods.ForgetPasswordActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_login"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/ziamfood"
            android:layout_gravity="center"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:paddingBottom="12dp"/>

        <TextView
            android:paddingLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/editemail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/background_white_tranparent" />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/btnAccept"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/pink"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:onClick="onClick"
                android:text="@string/accept"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
